core/engine/tests/snapshots/engine__decision-table-shipping_4.snap
---
source: core/engine/tests/engine.rs
expression: serialized_result
---
performance: "[perf]"
result:
  group: US_MEDIUM
  price:
    "$serde_json::private::Number": "35"
trace:
  2938f93f-1dce-4f85-a401-44c224d9237f:
    id: 2938f93f-1dce-4f85-a401-44c224d9237f
    input:
      group: US_MEDIUM
      price:
        "$serde_json::private::Number": "35"
    name: Response
    order:
      "$serde_json::private::Number": "2"
    output: ~
    performance: "[perf]"
    traceData: ~
  405841da-b7bb-4f4e-824f-21f1f4bc6fd9:
    id: 405841da-b7bb-4f4e-824f-21f1f4bc6fd9
    input:
      cart:
        items:
          - quantity:
              "$serde_json::private::Number": "2"
            unitPrice:
              "$serde_json::private::Number": "300"
          - quantity:
              "$serde_json::private::Number": "3"
            unitPrice:
              "$serde_json::private::Number": "50"
      customer:
        country: US
        tags: []
    name: Shipping Fees
    order:
      "$serde_json::private::Number": "1"
    output:
      group: US_MEDIUM
      price:
        "$serde_json::private::Number": "35"
    performance: "[perf]"
    traceData:
      index:
        "$serde_json::private::Number": "4"
      reference_map:
        customer.country: US
        customer.tags: []
        "sum(map(cart.items, #.unitPrice * #.quantity))":
          "$serde_json::private::Number": "750"
      rule:
        _id: db1f0c0e-e48a-4f9f-95fe-04e143cfd029
        "customer.country[d89ca9da-581e-4392-a990-24cde9c33a2b]": "\"US\""
        "customer.tags[184cc5f5-f459-41cf-814b-79f6ffea695d]": ""
        "sum(map(cart.items, #.unitPrice * #.quantity))[ea23eec9-76c5-4b62-821c-aec504545506]": "[500..1_000)"
  4c688656-05ba-4503-a582-02e6e4a5a135:
    id: 4c688656-05ba-4503-a582-02e6e4a5a135
    input: ~
    name: Request
    order:
      "$serde_json::private::Number": "0"
    output:
      cart:
        items:
          - quantity:
              "$serde_json::private::Number": "2"
            unitPrice:
              "$serde_json::private::Number": "300"
          - quantity:
              "$serde_json::private::Number": "3"
            unitPrice:
              "$serde_json::private::Number": "50"
      customer:
        country: US
        tags: []
    performance: "[perf]"
    traceData: ~
